--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "~1.0",
+        "overtrue/laravel-wechat": "~4.0",
         "socialiteproviders/weixin-web": "^3.0"
     },
     "require-dev": {
