--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+SNS_USER_UPDATE_EXPIRES=86400
+SNS_USER_LOGIN_PASSWORD=d1e2f3a4u5l6t
+
 WEIXINWEB_KEY=
 WEIXINWEB_SECRET=
 WEIXINWEB_REDIRECT_URI=
