添加第三方登录 QQ 微博

--- a/.env.example
+++ b/.env.example
@@ -35,9 +35,22 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+WECHAT_OPEN_PLATFORM_APPID=
+WECHAT_OPEN_PLATFORM_SECRET=
+WECHAT_OPEN_PLATFORM_TOKEN=
+WECHAT_OPEN_PLATFORM_AES_KEY=
+
 SNS_USER_UPDATE_EXPIRES=86400
 SNS_USER_LOGIN_PASSWORD=d1e2f3a4u5l6t
 
 WEIXINWEB_KEY=
 WEIXINWEB_SECRET=
 WEIXINWEB_REDIRECT_URI=
+
+QQ_KEY=
+QQ_SECRET=
+QQ_REDIRECT_URI=
+
+WEIBO_KEY=
+WEIBO_SECRET=
+WEIBO_REDIRECT_URI=
