--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "socialiteproviders/weibo": "^3.0",
         "socialiteproviders/weixin-web": "^3.0",
         "spatie/laravel-permission": "^2.29",
+        "sunnyshift/laravel-uploader": "^0.1.2",
         "toplan/laravel-sms": "~2.6"
     },
     "require-dev": {
