--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,11 @@ WEIBO_REDIRECT_URI=
 
 SMS_QCLOUD_APP_ID=
 SMS_QCLOUD_APP_KEY=
+
+#Dingo
+API_STANDARDS_TREE=
+API_SUBTYPE=
+API_VERSION=
+API_PREFIX=
+API_DOMAIN=
+API_DEBUG=
