--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "socialiteproviders/weixin-web": "^3.0",
         "spatie/laravel-permission": "^2.29",
         "sunnyshift/laravel-uploader": "^0.1.2",
-        "toplan/laravel-sms": "~2.6"
+        "toplan/laravel-sms": "~2.6",
+        "tymon/jwt-auth": "1.0.*",
+        "vinkla/hashids": "3.3.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
