解决图片反显问题

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,9 @@ WEIBO_REDIRECT_URI=
 SMS_QCLOUD_APP_ID=
 SMS_QCLOUD_APP_KEY=
 
+#Filesystems
+FILESYSTEM_DRIVER=qiniu
+
 #Dingo
 API_STANDARDS_TREE=
 API_SUBTYPE=
