优化搜索框格式、添加商品标签和章节管理

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ WECHAT_OPEN_PLATFORM_TOKEN=
 WECHAT_OPEN_PLATFORM_AES_KEY=
 
 SNS_USER_UPDATE_EXPIRES=86400
-SNS_USER_LOGIN_PASSWORD=d1e2f3a4u5l6t
+SNS_USER_LOGIN_PASSWORD=
 
 WEIXINWEB_KEY=
 WEIXINWEB_SECRET=
@@ -60,6 +60,12 @@ SMS_QCLOUD_APP_KEY=
 
 #Filesystems
 FILESYSTEM_DRIVER=qiniu
+
+#Qiniu
+QINIU_ACCESS_KEY=
+QINIU_SECRET_KEY=
+QINIU_BUCKET=
+QINIU_DOMAIN=
 
 #Dingo
 API_STANDARDS_TREE=
